# flappybird-neuralnetwork-geneticalgorithm-cpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  flappybird-neuralnetwork-geneticalgorithm-cpp.sln
AnnGALib/: AnnGA.cpp  AnnGA.h  AnnGALib.vcxproj  AnnGALib.vcxproj.filters
Array2DLib/: Array2D.cpp  Array2D.h  Array2DLib.vcxproj  Array2DLib.vcxproj.filters
FlappyBirdANNGA/: FlappyBirdANNGA.vcxproj  FlappyBirdANNGA.vcxproj.filters  FlappyBirdInterface.cpp  FlappyBirdInterface.h  main.cpp
FlappyBirdLib/: FlappyBird.cpp  FlappyBirdLib.vcxproj  FlappyBirdLib.vcxproj.filters
GeneticAlgorithmLib/: GeneticAlgorithm.cpp  GeneticAlgorithm.h  GeneticAlgorithmLib.vcxproj  GeneticAlgorithmLib.vcxproj.filters
NeuralNetworkLib/: ActivationFunction.h  Layer.h  NeuralNetworkLib.vcxproj  NeuralNetworkLib.vcxproj.filters
src/: CMakeLists.txt  main.cpp
src/AnnGALib/: AnnGA.cpp  AnnGA.hpp  CMakeLists.txt
src/Array2DLib/: Array2D.cpp  Array2D.h  Array2D.hpp  CMakeLists.txt
src/FlappyBirdANNGA/: CMakeLists.txt  FlappyBirdInterface.cpp  FlappyBirdInterface.h  FlappyBirdInterface.hpp
src/FlappyBirdLib/: CMakeLists.txt  FlappyBird.cpp  FlappyBird.h  FlappyBird.hpp
src/GeneticAlgorithmLib/: CMakeLists.txt  GeneticAlgorithm.cpp
src/NeuralNetworkLib/: ActivationFunction.cpp  ActivationFunction.hpp  CMakeLists.txt  Layer.cpp  Layer.hpp  NeuralNetwork.cpp  NeuralNetwork.hpp
